sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * Heap-allocated sprite builder for FFI use.
 */
typedef struct FfiSpriteBuilder {
    /**
     * The sprite being built.
     */
    struct FfiSprite sprite;
} FfiSpriteBuilder;
/**
 * FFI-safe Color representation.
 */
typedef struct FfiColor {
    /**
     * Red component (0.0 - 1.0).
     */
    float r;
    /**
     * Green component (0.0 - 1.0).
     */
    float g;
    /**
     * Blue component (0.0 - 1.0).
     */
    float b;
    /**
     * Alpha component (0.0 - 1.0).
     */
    float a;
} FfiColor;
/* === Sprite === */

/**
 * Creates a new sprite builder with a texture handle.
 */
struct FfiSpriteBuilder *goud_sprite_builder_new(uint64_t texture_handle);
/**
 * Creates a new sprite builder with default values.
 */
struct FfiSpriteBuilder *goud_sprite_builder_default(void);
/**
 * Sets the texture handle on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_texture(struct FfiSpriteBuilder *builder, uint64_t texture_handle);
/**
 * Sets the color tint on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_color(struct FfiSpriteBuilder *builder, float r, float g, float b, float a);
/**
 * Sets the alpha (transparency) on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_alpha(struct FfiSpriteBuilder *builder, float alpha);
/**
 * Sets the source rectangle on the builder for sprite sheet rendering.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_source_rect(struct FfiSpriteBuilder *builder, float x, float y, float width, float height);
/**
 * Sets the horizontal flip flag on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_flip_x(struct FfiSpriteBuilder *builder, bool flip);
/**
 * Sets the vertical flip flag on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_flip_y(struct FfiSpriteBuilder *builder, bool flip);
/**
 * Sets both flip flags on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_flip(struct FfiSpriteBuilder *builder, bool flip_x, bool flip_y);
/**
 * Sets the anchor point on the builder.
 */
struct FfiSpriteBuilder *goud_sprite_builder_with_anchor(struct FfiSpriteBuilder *builder, float x, float y);
/**
 * Builds and consumes the sprite builder, returning the final sprite.
 */
struct FfiSprite goud_sprite_builder_build(struct FfiSpriteBuilder *builder);
/**
 * Frees a sprite builder without building.
 */
void goud_sprite_builder_free(struct FfiSpriteBuilder *builder);
/**
 * Returns the black color constant.
 */
struct FfiColor goud_color_black(void);
/**
 * Returns the red color constant.
 */
struct FfiColor goud_color_red(void);
/**
 * Returns the green color constant.
 */
struct FfiColor goud_color_green(void);
/**
 * Returns the blue color constant.
 */
struct FfiColor goud_color_blue(void);
/**
 * Returns the yellow color constant.
 */
struct FfiColor goud_color_yellow(void);
/**
 * Returns the transparent color constant.
 */
struct FfiColor goud_color_transparent(void);
/**
 * Creates a color from RGBA components.
 */
struct FfiColor goud_color_rgba(float r, float g, float b, float a);
/**
 * Creates a color from RGB components with alpha = 1.0.
 */
struct FfiColor goud_color_rgb(float r, float g, float b);
/**
 * Creates a color from 8-bit RGBA values (0-255).
 */
struct FfiColor goud_color_from_u8(uint8_t r, uint8_t g, uint8_t b, uint8_t a);
/**
 * Creates a color from a hex value (0xRRGGBB or 0xRRGGBBAA).
 */
struct FfiColor goud_color_from_hex(uint32_t hex);
/**
 * Linearly interpolates between two colors.
 */
struct FfiColor goud_color_lerp(struct FfiColor from, struct FfiColor to, float t);
/**
 * Returns a new color with the specified alpha.
 */
struct FfiColor goud_color_with_alpha(struct FfiColor color, float alpha);