sdks/csharp/NativeMethods.g.cs


        /// <summary>
        ///  Returns the black color constant.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_black", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_black();

        /// <summary>
        ///  Returns the red color constant.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_red", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_red();

        /// <summary>
        ///  Returns the green color constant.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_green", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_green();

        /// <summary>
        ///  Returns the blue color constant.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_blue", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_blue();

        /// <summary>
        ///  Returns the yellow color constant.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_yellow", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_yellow();

        /// <summary>
        ///  Returns the transparent color constant.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_transparent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_transparent();

        /// <summary>
        ///  Creates a color from RGBA components.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_rgba", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_rgba(float r, float g, float b, float a);

        /// <summary>
        ///  Creates a color from RGB components with alpha = 1.0.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_rgb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_rgb(float r, float g, float b);

        /// <summary>
        ///  Creates a color from 8-bit RGBA values (0-255).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_from_u8", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_from_u8(byte r, byte g, byte b, byte a);

        /// <summary>
        ///  Creates a color from a hex value (0xRRGGBB or 0xRRGGBBAA).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_from_hex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_from_hex(uint hex);

        /// <summary>
        ///  Linearly interpolates between two colors.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_lerp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_lerp(FfiColor from, FfiColor to, float t);

        /// <summary>
        ///  Returns a new color with the specified alpha.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_with_alpha", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_with_alpha(FfiColor color, float alpha);

        /// <summary>
        ///  Creates a new sprite builder with a texture handle.
        ///
        ///  The builder is heap-allocated and must be either:
        ///  - Consumed with `goud_sprite_builder_build()`, or
        ///  - Freed with `goud_sprite_builder_free()`
        ///
        ///  # Parameters
        ///
        ///  - `texture_handle`: The texture asset handle (packed as u64)
        ///
        ///  # Returns
        ///
        ///  A pointer to a new FfiSpriteBuilder, or null if allocation fails.
        ///
        ///  # Safety
        ///
        ///  The returned pointer must be managed by the caller.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_new(ulong texture_handle);

        /// <summary>
        ///  Creates a new sprite builder with default values.
        ///
        ///  The texture handle will be invalid (u64::MAX) and must be set
        ///  before the sprite is usable.
        ///
        ///  # Returns
        ///
        ///  A pointer to a new FfiSpriteBuilder with default values.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_default();

        /// <summary>
        ///  Sets the texture handle on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `texture_handle`: The texture asset handle
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_sprite_builder_new()`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_with_texture", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_with_texture(FfiSpriteBuilder* builder, ulong texture_handle);

        /// <summary>
        ///  Sets the color tint on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `r`: Red component (0.0 - 1.0)
        ///  - `g`: Green component (0.0 - 1.0)
        ///  - `b`: Blue component (0.0 - 1.0)
        ///  - `a`: Alpha component (0.0 - 1.0)
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_sprite_builder_new()`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_with_color", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_with_color(FfiSpriteBuilder* builder, float r, float g, float b, float a);

        /// <summary>
        ///  Sets the alpha (transparency) on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `alpha`: Alpha component (0.0 = transparent, 1.0 = opaque)
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_sprite_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_with_alpha", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_with_alpha(FfiSpriteBuilder* builder, float alpha);

        /// <summary>
        ///  Sets the source rectangle on the builder for sprite sheet rendering.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `x`: X position of the source rectangle
        ///  - `y`: Y position of the source rectangle
        ///  - `width`: Width of the source rectangle
        ///  - `height`: Height of the source rectangle
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_sprite_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_with_source_rect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_with_source_rect(FfiSpriteBuilder* builder, float x, float y, float width, float height);

        /// <summary>
        ///  Sets the horizontal flip flag on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `flip`: Whether to flip horizontally
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_sprite_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_with_flip_x", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_with_flip_x(FfiSpriteBuilder* builder, [MarshalAs(UnmanagedType.U1)] bool flip);

        /// <summary>
        ///  Sets the vertical flip flag on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `flip`: Whether to flip vertically
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_sprite_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_with_flip_y", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_with_flip_y(FfiSpriteBuilder* builder, [MarshalAs(UnmanagedType.U1)] bool flip);

        /// <summary>
        ///  Sets both flip flags on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `flip_x`: Whether to flip horizontally
        ///  - `flip_y`: Whether to flip vertically
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_sprite_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_with_flip", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_with_flip(FfiSpriteBuilder* builder, [MarshalAs(UnmanagedType.U1)] bool flip_x, [MarshalAs(UnmanagedType.U1)] bool flip_y);

        /// <summary>
        ///  Sets the anchor point on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `x`: X anchor coordinate (normalized 0-1)
        ///  - `y`: Y anchor coordinate (normalized 0-1)
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_sprite_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_builder_with_anchor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSpriteBuilder* goud_sprite_builder_with_anchor(FfiSpriteBuilder* builder, float x, float y);
